[tool.poetry]
name = "axgridcommons"
version = "0.1.0"
description = "AxGrid commons"
license = "MIT"
homepage = "http://axgrid.com"
repository = "https://github.com/AxGrid/commons"
authors = ["Dmitry Vysochin <dmitry.vysochin@gmail.com>"]
keywords = ["commons"]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Python 3",
    "Topic :: Software Development :: Tools"
]


[tool.poetry.dependencies]
python = "^3.7"
asq = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
